--- a/Group4_FinalProject_MAD3115W2020/Base.lproj/Main.storyboard
+++ b/Group4_FinalProject_MAD3115W2020/Base.lproj/Main.storyboard
@@ -158,7 +158,13 @@
                         <color key="tintColor" red="0.0" green="0.41304331770000002" blue="0.52675994250000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Lists" id="UGd-hs-E4A"/>
+                    <navigationItem key="navigationItem" title="Lists" id="UGd-hs-E4A">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="n8k-Ua-xoK">
+                            <connections>
+                                <segue destination="oII-ek-cvc" kind="show" id="Xq9-Tw-zaN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="iTableDrivers" destination="e2Q-tL-uSs" id="lJn-tM-ue1"/>
                         <outlet property="iTableOwners" destination="u64-GA-h81" id="V1A-up-ykA"/>
@@ -172,6 +178,22 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
         </scene>
+        <!--Person-->
+        <scene sceneID="ZFS-kH-Njw">
+            <objects>
+                <viewController id="oII-ek-cvc" customClass="AddPersonViewController" customModule="Group4_FinalProject_MAD3115W2020" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RaB-su-Bhz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="G81-B5-tgh"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Person" id="XnS-GK-vaT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bTf-5d-ik5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1884" y="138"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="jg8-39-NOI">
             <objects>
@@ -180,6 +202,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bMX-37-fcH">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.088881986593475223" green="0.21694519346229524" blue="0.26583433968161574" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
